Fixed blurred background for wlogout. Create blurred version with magick

--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -23,10 +23,13 @@ by Stephan Raabe (2023)
     font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
 	background-image: none;
 	transition: 20ms;
+	box-shadow: none;
 }
 
 window {
-	background-color: rgba(12, 12, 12, 0.1);
+	background-image: url("../../.cache/current_wallpaper_blur");
+	background-position: center;
+	background-size: cover;
 }
 
 button {
